--- a/journal/2-3-2025.md
+++ b/journal/2-3-2025.md
@@ -24,7 +24,7 @@ steps
 
 1. Create Journal
 2. Planning
-3. Copy Planning to goals and task
+3. Copy Planning to goals-task or to instructions.
 4. Save to Github
 
 I think these rules and formats are easy to follow.
@@ -67,6 +67,7 @@ Now I will attempt to follow the above rules and format
 
 1. already paid them for down payment of 5k each, 5k for strucural engineer and 5k for drafts man
 2. need to follow up them for the structural Analysis
+3. Eng. update me that He received the drawings
 
 ### Billing
 
@@ -93,10 +94,10 @@ _bills that needs to be paid today_
 1. Security Bank Credit Card - P25,000.00
 2. pag-ibig loan - P4,046.38
 3. BDO loan
-4. Shopee - 3,846.08
+4. Shopee - 3,846.08 - paid
 5. Globe Post Paid - P649.00 paid
 6. Globe House Internet - P1,899.00 paid
-7. Negros Power - 12,036.40
+7. Negros Power - 12,036.40 - paid
 
 ### Journal and Planning System
 
